--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 
 <style>
-
+    canvas {
+        margin : 5px;
+    }
 </style>
 	
 </head>
 
 <body>
     <p>Video Sim</p>
+    <p> Left to right: 1, 3, and 6 e RMS read noise</p>
 </body>
 
 <script src="js/d3.min.js"></script>
