--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <p>Video Sim</p>
     <p> Left to right: 1, 3, and 6 count RMS read noise</p>
-    <p> With a feature of 3 counts mean brightness inset</p>
+    <p> With a feature of 6 counts peak wandering around</p>
 </body>
 
 <script src="js/d3.min.js"></script>
