--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <p>Video Sim</p>
-    <p> Left to right: 1, 3, and 6 count RMS read noise</p>
-    <p> With a feature of 6 counts peak wandering around</p>
+    <p> Left to right: 0, 1, 2, 3, 4, 5 count RMS read noise</p>
+    <p> With a feature of 5 counts peak wandering around</p>
 </body>
 
 <script src="js/d3.min.js"></script>
