--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         display: flex;
         flex-wrap: wrap;
     }
+
+    .slider {
+        -webkit-appearance: none;
+        width: 80%;
+        height: 25px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+    }
+
 </style>
 	
 </head>
