trying comparison of actual cameras

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     .container {
         display: flex;
         flex-wrap: wrap;
+
+    }
+
+    .subContainer {
+        -webkit-flex-basis: 100%; /* Safari 6.1+ */
+        flex-basis: 100%;
     }
 
     .slider {
@@ -28,10 +34,11 @@
 </head>
 
 <body>
-    <p>Video Sim</p>
+    <p>Video Sim - Adam Wise 2019   </p>
 
     <div class = "instrumentPanel" id = "mainControls"></div>
-    <div class = "container" id = "mainContainer"></div>
+    <div class = "container" id = "mainContainer">
+    </div>
 
 </body>
 
