--- a/index.html
+++ b/index.html
@@ -18,16 +18,46 @@
         flex-basis: 100%;
     }
 
-    .slider {
-        -webkit-appearance: none;
-        width: 80%;
-        height: 25px;
-        background: #d3d3d3;
-        outline: none;
-        opacity: 0.7;
-        -webkit-transition: .2s;
-        transition: opacity .2s;
+    .windowLabel {
+        text-align : center;
+        font-weight: bold;
     }
+
+    .nameLabel {
+        text-align : center;
+        font-weight: bold;
+        font-size: 14pt;
+    }
+
+    .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #23029e;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #23029e;
+  cursor: pointer;
+}
 
 </style>
 	
@@ -43,6 +73,7 @@
 </body>
 
 <script src="js/d3.min.js"></script>
+<script src="js/models.js"></script>
 <script src="js/videoSim.js"></script>
 
 </html>
