more ui tweaks and added another zyla

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     }
 
     .container {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-
+        width: 800px;
     }
 
     .subContainer {
-        display: flex;
-        flex-wrap: wrap;
+        display : inline-block;
+        width: 800px;
+    }
+
+    .cameraDiv {
+        display: inline-block;
+        width : 200px;
     }
 
     .windowLabel {
@@ -61,12 +63,12 @@
 }
 
 .instrumentPanel{
-    border: 1px solid black;
+    border: 1px solid gray;
     padding: 4px;
 }
 
 .explainerBox{
-    border: 1px solid black;
+    border: 1px solid gray;
     font-size: 14pt;
     margin: 5px;
     padding: 5px;
