--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
     }
 
     .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 25px;
-    border-radius: 5px;  
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+        -webkit-appearance: none;
+        width: 100%;
+        height: 25px;
+        border-radius: 5px;  
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
 }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%; 
-  background: #23029e;
-  cursor: pointer;
-}
+    .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%; 
+        background: #23029e;
+        cursor: pointer;
+    }
 
 .slider::-moz-range-thumb {
   width: 25px;
@@ -79,8 +79,15 @@
     font-size: 18pt;
 }
 
+.sliderLabel {
+    font-weight: bold;
+    font-size: 15pt;
+    margin: 0 5px 0 5px;
+}
+
 label {
     width : 100%;
+    display: block;
     margin : 5px;
     font-size : 14pt;
 }
