made cameras draggable

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         background-color : rgba(255,255,255, 0.5);
         text-shadow: 3px 3px 8px #FFFFFF;
         padding : 5px;
+        border : 3px solid black;
+        font-size : 10px;
 
         
     }
@@ -43,7 +45,7 @@
     .nameLabel {
         text-align : center;
         font-weight: bold;
-        font-size: 14pt;
+        font-size: 1.2em;
     }
 
     .slider {
