--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         text-shadow: 3px 3px 8px #FFFFFF;
         padding : 5px;
         border : 3px solid black;
-        font-size : 10px;
+        font-size : 10px;   
+    }
 
-        
+    text {
+        font-family: sans-serif;
+        font-size: 100px;
     }
 
     .cameraDiv {
